--- a/src/components/NavigationBar.css
+++ b/src/components/NavigationBar.css
@@ -60,6 +60,20 @@ nav .icon-burger .line {
 	border-radius: 3px;
 	transition: all .3s ease-in-out;
 }
+
+.login-button {
+    padding: 14px 20px !important;
+    background-color: rgb(255, 165, 0, 0.3);
+    color: rgb(255, 150, 0);
+    border-radius: 5px;
+    transition: all 180ms ease-out 0s;
+}
+
+.login-button:hover {
+    background-color: rgb(255, 165, 0);
+    color: white;
+}
+
 @media screen and (max-width: 768px) {
 	nav .logo {
 		float: none;
