--- a/src/components/NavigationBar.css
+++ b/src/components/NavigationBar.css
@@ -6,6 +6,7 @@ nav {
 	top: 0;
 	padding: 0 5%;
 	height: 100px;
+    background-color: #18191c;
 }
 nav .logo {
 	float: left;
@@ -33,7 +34,7 @@ nav .links li {
 }
 nav a {
 	text-decoration: none;
-    color: black;
+    color: white;
 }
 nav .links a {
 	display: block;
@@ -64,7 +65,7 @@ nav .icon-burger .line {
 .login-button {
     padding: 10px 12px !important;
     border: 2px solid rgb(255, 165, 0);
-    color: black;
+    color: white;
     border-radius: 5px;
     transition: all 180ms ease-out 0s;
 }
