--- a/src/components/NavigationBar.css
+++ b/src/components/NavigationBar.css
@@ -36,7 +36,7 @@ nav a {
 	text-decoration: none;
     color: white;
 }
-nav .links a {
+nav .links a,button {
 	display: block;
 	padding: 1em;
 	font-size: 16px;
@@ -63,6 +63,8 @@ nav .icon-burger .line {
 }
 
 .login-button {
+    cursor: pointer;
+    background-color: transparent;
     padding: 10px 12px !important;
     border: 2px solid rgb(255, 165, 0);
     color: white;
@@ -98,7 +100,7 @@ nav .icon-burger .line {
 		box-sizing: border-box;
 		transition: all .5s ease-in-out;
 	}
-	nav .links a {
+	nav .links a,button {
 		font-size: 20px;
 	}
 	nav :checked ~ .links {
