--- a/src/components/NavigationBar.css
+++ b/src/components/NavigationBar.css
@@ -56,23 +56,31 @@ nav .icon-burger {
 nav .icon-burger .line {
 	width: 30px;
 	height: 5px;
-	background-color: black;
+	background-color: white;
 	margin: 5px;
 	border-radius: 3px;
 	transition: all .3s ease-in-out;
 }
 
-.login-button {
-    cursor: pointer;
-    background-color: transparent;
+.dash-button {
+	background-color: transparent;
+    outline: none;
     padding: 10px 12px !important;
     border: 2px solid rgb(255, 165, 0);
     color: white;
     border-radius: 5px;
     transition: all 180ms ease-out 0s;
+    cursor: pointer;
+	min-width: 140px;
 }
 
-.login-button:hover {
+.logged-button {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.dash-button:hover {
     background-color: rgb(255, 165, 0);
     color: white;
 }
@@ -95,16 +103,19 @@ nav .icon-burger .line {
 		height: auto;
 		flex-direction: column;
 		justify-content: space-evenly;
-		background-color: white;
+		background-color: #18191c;
 		overflow: hidden;
 		box-sizing: border-box;
 		transition: all .5s ease-in-out;
+	}
+	.dash-button {
+		margin-bottom: 20px;
 	}
 	nav .links a,button {
 		font-size: 20px;
 	}
 	nav :checked ~ .links {
-		bottom: 300px;
+		bottom: 250px;
 	}
 	nav .icon-burger {
 		display: block;
