--- a/src/components/Server.css
+++ b/src/components/Server.css
@@ -36,6 +36,7 @@
     align-items: center;
     flex-flow: row wrap;
     justify-content: flex-start;
+    width: 50%;
 }
 
 .server-icon {
@@ -58,7 +59,6 @@
     padding: 10px 25px;
     color: inherit;
     border: none;
-    background-color: #3eb386;
     border-radius: 3px;
     outline: none;
 }
