--- a/src/components/NavigationBar.css
+++ b/src/components/NavigationBar.css
@@ -5,7 +5,7 @@ nav {
 	top: 0;
 	padding: 0 5%;
 	height: 100px;
-    background-color: #18191c;
+    background-color: #000;
 }
 nav .logo {
 	float: left;
