--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,12 @@
 body {
   margin: 0;
   padding: 0;
-  background-color: rgb(52, 56, 60);
+  background-color: #1b1c1d;
   color: white;
   font-family: 'Inter', sans-serif;
+  height: 100vh;
+}
+
+#root {
+  height: 100%;
 }
