--- a/src/index.css
+++ b/src/index.css
@@ -23,3 +23,12 @@ a {
 .page-content {
   min-height: calc(100vh - 90px);
 }
+
+::-webkit-scrollbar {
+  width: 5px;
+  background-color: none;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #f0f8ff;
+}
