--- a/src/components/layout/NavigationBar.css
+++ b/src/components/layout/NavigationBar.css
@@ -5,7 +5,7 @@ nav {
 	top: 0;
 	padding: 0 5%;
 	height: 100px;
-    background-color: #000;
+    background-color: hsl(0, 0%, 4%);
 }
 nav .logo {
 	float: left;
