--- a/src/components/lib/Button.scss
+++ b/src/components/lib/Button.scss
@@ -1,12 +1,14 @@
 .button {
+
     border-radius: 10px;
     cursor: pointer;
     background-color: transparent;
     box-shadow: none;
     border: none;
-}
 
-.button.bordered {
-    color: white;
-    border: 2px solid var(--orange);
+    .bordered {
+        color: white;
+        border: 2px solid var(--orange);
+    }
+
 }
