--- a/src/pages/ServerSettings.css
+++ b/src/pages/ServerSettings.css
@@ -6,3 +6,9 @@
     margin: 3em auto;
     max-width: 70rem;
 }
+
+.settings-form {
+    padding: 0.5rem 2rem 2rem;
+    background-color: #0a0a0a;
+    border-radius: 0.5rem;
+}
