--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600;700&display=swap');
 
 :root {
   --orange: #ffa500;
+}
+
+* {
+  font-family: 'Poppins', sans-serif;
+  font-weight: 300;
+}
+
+h2, h3 {
+  font-weight: 700;
 }
 
 body {
@@ -10,7 +19,6 @@ body {
   padding: 0;
   background-color: #1b1c1d;
   color: white;
-  font-family: 'Inter', sans-serif;
   height: 100vh;
 }
 
