:sparkles: Add success toast and fix dropdown

--- a/src/index.css
+++ b/src/index.css
@@ -44,3 +44,7 @@ a {
 ::-webkit-scrollbar-thumb {
   background-color: #f0f8ff;
 }
+
+.Toastify__toast--success {
+  background-color: #62A87C !important;
+}
