--- a/src/components/layout/NavigationBar.scss
+++ b/src/components/layout/NavigationBar.scss
@@ -44,7 +44,7 @@ nav {
 		display: block;
 		padding: 1em;
 		font-size: 1rem;
-		font-weight: bold;
+		font-weight: 400;
 	}
 
 	#nav-toggle {
@@ -56,7 +56,7 @@ nav {
 		display: none;
 		position: absolute;
 		right: 5%;
-		top:3.1rem;
+		top: 3.1rem;
 		transform: translateY(-50%);
 
 		.line {
