:art: Use rem instead of pixels

--- a/src/index.scss
+++ b/src/index.scss
@@ -86,7 +86,7 @@ a {
     background-size: 200% auto;
     color: white;            
     box-shadow: 0 0 20px #eee;
-    border-radius: 10px;
+    border-radius: 0.625rem;
     display: block;
     &:hover {
         background-position: right center;
@@ -94,6 +94,6 @@ a {
         text-decoration: none;
     }
     &:focus {
-        box-shadow: 0 0 20px #eee !important;
+        box-shadow: 0 0 1.25rem #eee !important;
     }
 }
