:art: Change text color on hover

--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -19,7 +19,7 @@
     transition: background-color 0.5s ease;
 
     &:hover {
-        color: black;
+        color: #963131;
         background-color: white;
     }
 }
