--- a/src/components/layout/NavigationBar.scss
+++ b/src/components/layout/NavigationBar.scss
@@ -3,9 +3,11 @@ nav {
 	left: 0;
 	right: 0;
 	top: 0;
-	padding: 0 5%;
+	padding: 0 10px;
 	height: 6.25rem;
     background-color: hsl(0, 0%, 4%);
+	    display: flex;
+    justify-content: center;
 
 	.logo {
 		float: left;
@@ -21,13 +23,9 @@ nav {
 	}
 
 	.links {
-		float: right;
-		padding: 0;
 		margin: 0;
-		width: 40%;
 		height: 100%;
 		display: flex;
-		justify-content: space-around;
 		align-items: center;
 
 		li {
