--- a/src/components/layout/NavigationBar.scss
+++ b/src/components/layout/NavigationBar.scss
@@ -5,9 +5,9 @@ nav {
 	top: 0;
 	padding: 0 10px;
 	height: 6.25rem;
-    background-color: hsl(0, 0%, 4%);
-	    display: flex;
-    justify-content: center;
+    	background-color: hsl(0, 0%, 4%);
+	display: flex;
+	justify-content: center;
 
 	.logo {
 		float: left;
@@ -39,7 +39,7 @@ nav {
 		color: white;
 	}
 
-	.links a, button {
+	.links-container a, button {
 		display: block;
 		padding: 1em;
 		font-size: 1rem;
@@ -87,19 +87,19 @@ nav {
 
 #dash-button {
 	background-color: transparent;
-    outline: none;
-    padding: 0.625rem 0.75rem !important;
-    border: 0.1rem solid rgb(255, 165, 0);
-    color: white;
-    border-radius:0.3rem;
-    transition: all 180ms ease-out 0s;
-    cursor: pointer;
+	outline: none;
+	padding: 0.625rem 0.75rem !important;
+	border: 0.1rem solid rgb(255, 165, 0);
+	color: white;
+	border-radius:0.3rem;
+	transition: all 180ms ease-out 0s;
+	cursor: pointer;
 	min-width: 8.75rem;
 }
 
 #dash-button:hover {
-    background-color: rgb(255, 165, 0);
-    color: white;
+	background-color: rgb(255, 165, 0);
+	color: white;
 }
 
 .logged-button {
@@ -115,28 +115,28 @@ nav {
 			width: auto;
 			padding-left: 0.625rem;
 		}
-		.links {
+		.links-container {
 			float: none;
 			position: fixed;
-			z-index: 9;
 			left: 0;
 			right: 0;
 			bottom: 100%;
 			width: auto;
 			height: calc(100vh - 6.25rem);
+			transition: cubic-bezier(0.39, 0.575, 0.565, 1);
+			overflow: hidden;
+		}
+		.links {
 			flex-direction: column;
 			justify-content: space-evenly;
 			background-color: #18191c;
-			overflow: hidden;
 			box-sizing: border-box;
-			transition: all .5s ease-in-out;
 		}
 		.links a,button {
 			font-size: 1.25rem;
 		}
-		#nav-toggle:checked ~ .links-container ~ .links {
-			top: 6.25rem;
-			bottom: 0rem !important;
+		#nav-toggle:checked ~ .links-container {
+			bottom: 0rem;
 		}
 		.icon-burger {
 			display: block;
